--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "dexie": "^3.2.3",
     "jsdom": "^20.0.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
