--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "dexie": "^3.2.3",
+    "dexie-react-hooks": "^1.1.3",
     "jsdom": "^20.0.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
