--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
     "@types/chrome": "^0.0.203",
     "@types/node": "^18.11.11",
     "@types/react": "^18.0.26",
@@ -28,6 +27,7 @@
     "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^8.3.0",
     "progress-webpack-plugin": "^1.0.16",
+    "raw-loader": "^4.0.2",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
@@ -36,6 +36,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^19.0.0",
     "dexie": "^3.2.3",
     "dexie-react-hooks": "^1.1.3",
     "jsdom": "^20.0.3",
